crates/cli/tests/snapshots/lib__run@arrays.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/arrays.nemo
---
Success: 0
42
1
