crates/cli/tests/snapshots/lib__run@builtins.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/builtins.nemo
---
Success: 0
-1
-1
31
63
10
