crates/cli/tests/snapshots/lib__run@closures.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/closures.nemo
---
Success: 0
11
5
3
