crates/cli/tests/snapshots/lib__run@decl.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/decl.nemo
---
Success: 0
10
1
1
1
1
2
