crates/cli/tests/snapshots/lib__run@divide_by_zero.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/divide_by_zero.nemo
---
Trapped: error while executing at wasm backtrace:
    0:     0x43 - <unknown>!::main
