crates/cli/tests/snapshots/lib__run@expr_postfix.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/expr_postfix.nemo
---
Success: 0
42
1
1
2
2
1
0
10
42
42
