crates/cli/tests/snapshots/lib__run@first_class_prim.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/first_class_prim.nemo
---
Success: 0
32
